--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   </head>
 <body>
   <div class="container">
+    <div class="row navigation">
     <div class="span2 logo">
       Logo
     </div>
@@ -91,6 +92,11 @@
   <div class="row section2">
     <div class="span12">
       Marketing Section 2
+      </div>
+    </div>
+  <div class="row faq">
+    <div class="span12">
+      FAQ
       </div>
     </div>
   <div class="row footer">
