--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
           rel="stylesheet" type="text/css">
     <style type="text/css">
-
+      /* an Update 07/25 . a test.  */
       /* Large desktop */
       @media (min-width: 980px) { 
         body {
