--- a/index.html
+++ b/index.html
@@ -213,6 +213,12 @@
           </div>
           </div>
           <div class="row-fluid">
+	    <!-- big pay with bitcoin button-->
+    <div>
+
+<a class="coinbase-button" data-code="38371a0cce9e4b00baf4f041ae2925df" href="https://coinbase.com/checkouts/38371a0cce9e4b00baf4f041ae2925df">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+
+</div>
           <div class="span8 offset2 social">
 
 	    <!-- AddThis Button BEGIN -->
